data/derived/fa15/progs/unify/prog0550.ml.out
Characters 23-24:
  let _ = catLists [1;] [2; 3; 4];;
                         ^
Error: This expression has type int but an expression was expected of type
         int list
